# TERRAFORM_PROVISONNING

./: .env  .gitignore  README.md  main.tf  mkdocs.yml  pyproject.toml  role_assignments.json  setup_environment.sh  variables.tf
modules/vm/: main.tf  outputs.tf  variables.tf
