[tool.poetry]
name = "terraform-provisionning"
version = "0.1.0"
description = "simplon s data engineer first terraform azure project"
authors = ["Serge Buasa <sergebuasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
